src/test/deca/context/valid/test_class/unit_selection_boolean.deca
// Description:
//    Minimalistic class with attribut.
// Results:
//    true
//
// History:
//    Created on 16/01/2025

class A {
    boolean x = true;
}

{
    A a = new A() ;
    println(a.x) ;
}
